--- a/GlobalSolutionGVM/src/main/webapp/resourse/css/style.css
+++ b/GlobalSolutionGVM/src/main/webapp/resourse/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body{
-	background: #eee;
+	background: #f5f5f5;
 }
 
 .form-card{
@@ -21,7 +21,7 @@ body{
 
 .setup-name {
     font-size: 1.5rem;
-    font-weight: 700;
+    font-weight: 750;
 }
 
 .setup-description {
@@ -35,13 +35,13 @@ body{
 
 .setup-price {
     font-size: 1.5rem;
-    font-weight: 600;
+    font-weight: 650;
     margin-bottom: .5rem;
     align-self: flex-end;
 }
 
 .setup-list-item img {
-    width: 150px;
+    width: 160px;
     box-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 3px 6px rgb(0 0 0 / 23%);
     margin-right: 2rem;
 }
